--- a/sprint-1/stylesheets/sass/views/_default.scss
+++ b/sprint-1/stylesheets/sass/views/_default.scss
@@ -36,7 +36,7 @@
     
     .header {
         background-color: $black;
-    
+        
         .nav {
             @include nav;
         }
@@ -74,6 +74,7 @@
     
     .main {
        width: 100%; 
+       @include set-padding(0,2%);
     }
     
     .image {
