--- a/sprint-1/stylesheets/sass/views/_tablet.scss
+++ b/sprint-1/stylesheets/sass/views/_tablet.scss
@@ -10,9 +10,18 @@
         }
         
         .hero {
+            min-height: 100vh;
             &__text {
                 @include text(3.5rem, 4.25rem);
             }
+        }
+
+        .header{
+            position: absolute;
+            width: 100%;
+            top:0;
+            left:0;
+            z-index: 99; //to put nav in front at all times
         }
         
         .image {
@@ -26,7 +35,7 @@
         }
         
         .article {
-            @include set-padding(3vw, 3vw);
+            @include set-padding(3%, 3%);
     
             &__blurbs {
                 > * {
